--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -2,6 +2,7 @@
 .image-media-query{
     height: 250px;
     object-fit: cover;
+   filter:saturate(10px);
 }
 
 @media (min-width: 500px) {
@@ -22,4 +23,26 @@
     .image-media-query{
       height: 550px;
  }
+}
+
+.degradado {
+
+}
+
+.degradado::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(20, 44, 108, 0.678) 1%,transparent);
+  pointer-events: none;
+  z-index: 1; /* Degradado sobre la imagen */
+}
+
+.degradado {
+
+
+  z-index: -1; /* Imagen debajo del degradado */
 }
