--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -36,7 +36,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg, rgba(20, 44, 108, 0.678) 1%,transparent);
+
+  background: linear-gradient(0deg, rgba(20, 44, 108, 0.849) 1%,transparent);
   pointer-events: none;
   z-index: 1; /* Degradado sobre la imagen */
 }
@@ -44,5 +45,29 @@
 .degradado {
 
 
-  z-index: -1; /* Imagen debajo del degradado */
+  z-index: -1; 
+}
+
+h5,p{
+  backdrop-filter:blur(3px);
+}
+h5 {
+  font-style: italic;
+  font-size: 19px;
+
+}
+@media (min-width: 550px ) {
+  h5 {
+    font-size: 25px;
+  }
+}
+@media (min-width: 750px ) {
+  h5 {
+    font-size: 30px;
+  }
+}
+@media (min-width: 1000px ) {
+  h5 {
+    font-size: 35px;
+  }
 }
